

noinst_PROGRAMS = \
	lunar \
	mars \
	comet \
	sun
	
lunar_SOURCES = \
	lunar.c 
		
mars_SOURCES = \
	mars.c

comet_SOURCES = \
	comet.c
	
sun_SOURCES = \
	sun.c
	
INCLUDES = \
	 -Wall -I../src

lunar_LDADD = \
	../src/libnova.la

mars_LDADD = \
	../src/libnova.la

comet_LDADD = \
	../src/libnova.la

sun_LDADD = \
	../src/libnova.la
